Enhance user authentication and role management with JWT support